ags (0.7.64)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented OSS support ags_devout_oss_init(), ags_devout_oss_play() and ags_devout_oss_stop()
	* implemented OSS part of ags_devout_get_poll_fd() and ags_devout_get_pcm_info()
	* fixed potential dead-locks in ags_devout.c
	* fixed string format in ags_devout.c
	* replaced ALSA MIDI decoder with ags_midi_buffer_util_decode()
	* added library completion routines ags_strv_contains() and ags_strv_length()
	* improvded configure.ac to partially disable ALSA support

ags (0.7.63)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed possible NULL pointer access caused by ags_audio_application_context.c and ags_xorg_application_context.c
	* fixed possible dead-lock in ags_play_audio_signal.c
	* fixed format configuration issues in ags_audio_signal.c
	* fixed ags_functional_audio_test.c
	* fixed ags_audio_test.c
	* fixed ags_channel_test.c
	* fixed ags_notation_test.c
	* fixed ags_pattern_test.c
	* fixed ags_recycling_test.c
	* fixed ags_thread_test.c
	* improved ags_devout.c to not allow set non-existing soundcard except default hw:0

ags (0.7.62)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved build system
	* improved ags_functional_audio_test.c to provide configuration

ags (0.7.61)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed build system

ags (0.7.60)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed spelling error unknow to unknown
	* fixed underscore to score of installation directories
	* modified libgsequencer to be private

ags (0.7.59)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed package name in .pc files

ags (0.7.58)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* split API reference

ags (0.7.57)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* relicensed docs to be GFDL+3 without invariant sections

ags (0.7.56)
